Kommentare zum "Splitting-Lemma" hinzugefügt

--- a/skript.tex
+++ b/skript.tex
@@ -889,6 +889,9 @@ wobei $i: N\to G, n\mapsto (n,e_H), p:G\to H, (n,h)\mapsto h$ ist $j:H\to G, h\m
         % FIXME Was ist \gamma_h? Das geht nur, falls N und H eine gemeinsame Obergruppe haben. Ist hier \(i^{-1}\circ\gamma_{s(h)}\circ i\) gemeint?
         % -- Es handelt sich hier um ein äußeres semidirektes Produkt, die gemeinsame Obergruppe ist nicht vonnöten (Fabian)
         %    -- Der Fall einer gemeinsamen Obergruppe ist jedoch der einzige, in dem wir \gamma_h definiert haben. *Das* ist mein Problem. \gamma_h kann kein semidirektes Produkt definieren, ohne dass wir \gamma_h definiert haben. (Peter)
+        %       -- Siehe (2) in der Bemerkung davor. Jede Abbildung \gamma: H -> Aut(N), h -> \gamma_h:= \gamma(h) definiert ein äußeres semidirektes Produkt, also eine Gruppe auf der Trägermenge NxH mit einer speziellen Multiplikation. So verstehe ich das zumindest. Dieser Satz hier schränkt die im Falle eines Schnittes möglichen Automorphismen noch etwas ein. Da i injektiv ist, lässt sich so anscheinend ein Automorphismus definieren. Reicht das nicht aus? (Fabian)
+        %       -- Dieser Satz ist auch bekannt als "Splitting-Lemma for Groups". Dieser Artikel könnte weiterhelfen http://cykenleung.blogspot.de/2012/12/a-splitting-lemma-for-groups.html (Fabian)
+        %       -- Das Einzige was dem Beweis dieses Satzes aus meiner Sicht fehlt ist, der Beweis der Wohldefiniertheit von \gamma (Fabian)
 \end{thm}
 
 \begin{proof}
