sectionwise Lemmata, Sätze u. Korollare nummeriert

--- a/skript.tex
+++ b/skript.tex
@@ -44,9 +44,9 @@
 
 % Environments
 % Stuff with proof
-\newtheorem{thm}{Satz}
-\newtheorem{lemma}{Lemma}
-\newtheorem{kor}{Korollar}
+\newtheorem{thm}{Satz}[section]
+\newtheorem{lemma}[thm]{Lemma}
+\newtheorem{kor}[thm]{Korollar}
 % Definition-like stuff
 \theoremstyle{definition}
 \newtheorem*{defn}{Definition}
